# TP

./: README.md
CMake/: CMakeLists.txt
CMake/A/: preparing.py
CMake/B/: CMakeLists.txt  lib.cpp  lib.h
CMake/C/: main.cpp
bash/: README.md  script
